Fixed receipt visibility issue by adding top margin

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,6 +241,7 @@ border-bottom: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center; 
+    margin-top: 60px;
 }
     
 .confirmation-logo {
